# dokan-local

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.vue  main.ts  persist-state.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: service.rs
src-tauri/src/state/: mod.rs
src/components/: Terminal.vue
src/components/icons/: GithubIcon.vue
src/composables/: useService.ts
src/constants/: index.ts
src/enum/: command.ts  service.ts  state.ts
src/pages/: Env.vue  Home.vue  Nginx.vue
src/pages/setup/: Basic.vue  Clone.vue  Env.vue  Index.vue
src/stores/: app.ts  config.ts  log.ts
src/types/: service.ts
